# task-dispatch

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.test  README.md  bug3.f90  fpm.toml  test_gfortran.sh
.github/workflows/: test-gfortran.yml  test-push.yml
app/: console.f90  main2.f90  parserplay.f90
src/execution/: execute_ast.f90  generator.f90  runner.f90
src/execution/generator/: generator.f90  generator_from_ast.f90  op_generator.f90  reference_generator.f90  value_generator.f90
src/generator/: generator_from_ast.f90  op_generator.f90
src/operation/: ast.f90  command.f90  database.f90  execute.f90  generator.f90  input_args.f90  namespace.f90  operation.f90  runner.f90
src/operation/basic/: add.f90  multiply.f90  pow.f90  sequence_op.f90  square.f90
src/operation/builtin/: item_operation.f90  sequence.f90  sequence_operation.f90  trace_operation.f90  zip_operation.f90
src/operation/example/: add.f90  example_database.f90  multiply.f90  (+4 more)
src/parser/: ast.f90  characters.f90  parser.f90  stringbuffer.f90  token.f90  tokenizer.f90
src/runner/: runner.f90  simple_prompt.f90
src/util/: error.f90  error_with_line.f90
src/value/: value.f90  value_base.f90  value_ref.f90
test/: aaa.f90  assert.f90  assert_macro.h  generator.f90  gfortran_bug1.f90  gfortran_bug2.f90  input_args.f90  range.f90  test_command.f90  test_fmt_token_loc.F90  test_namespace.f90  test_operation_matching.f90  test_parse_expression.F90  test_parse_statement.F90  test_parser.f90  test_parser_seq.f90  test_refs.f90  test_stringbuffer.f90  test_tokenizer.F90
(+5 files in other folders)
